LIST OF CHANGES
---------------

release 60.5.0
 - Add Targeted NanoSeq Pulldown to Duplex-Seq analysis library_type list
 - Refactored existing code to create new public functions, which will be
   used in the extension of npg_run_deletable script dealing with decisions
   about correctness of archival of portable pipelines output.
 - Extended npg_run_deletable script to deal with the output of portable
   pipelines for a case when this output is archived to iRODS.

release 60.4.0
 - Removed co-location check (host and staging area) from the pipeline
   daemon code. This check is no longer relevant, the staging servers
   listed in the code are no longer in use. 
 - do haplotag processing for appropriate library types
 - switch off spatial filtering application and QC check for NovaSeq platform
 - Remove pipeline extensions for the npg_tracking daemon monitor,
   they are no longer in use.

release 60.3.0
 - Extended i5opposite pad to 5 bases.
 - Check for pp archive existence prior to job creation.
   pp archival could notcope with data produced by non-current
   pp versions. When the version of an artic pp is updated, the
   pp archival jobs that are scheduled after the update, but have to
   archive data, which was produced prior to the update, fail.
   The solution is to check that the pp staging archive for the 'current'
   pp version exists. If it does not exist, but there is an archive for
   some other version, data from that staging archive should be archived.
   Staging archives for multiple pp versions cause the code to error.

release 60.2.0
 - When generating lane taglist files truncate and pad i7 and i5 tags independently
 - Support no_auto, no_auto_archive and no_auto_analysis tags for daemons
 - npg_run_is_deletable - delete runs with status 'run cancelled' and
   'data discarded' after 14 days of the status date irrespectively of
   what study the samples belong to. The samplesheet is not available for