@@ -1,0 +1,14 @@
+[Data],,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+Lane,Sample_ID,Sample_Name,GenomeFolder,Index,Index2,bait_name,default_library_type,default_tag_sequence,default_tagtwo_sequence,email_addresses,email_addresses_of_followers,email_addresses_of_managers,email_addresses_of_owners,gbs_plex_name,is_control,is_pool,lane_id,lane_priority,library_name,organism,organism_taxon_id,project_cost_code,project_id,project_name,purpose,qc_state,request_id,required_insert_size_range,sample_accession_number,sample_cohort,sample_common_name,sample_consent_withdrawn,sample_control_type,sample_description,sample_donor_id,sample_id,sample_is_control,sample_name,sample_public_name,sample_reference_genome,sample_supplier_name,spiked_phix_tag_index,study_accession_number,study_alignments_in_bam,study_contains_nonconsented_human,study_contains_nonconsented_xahuman,study_description,study_id,study_name,study_reference_genome,study_separate_y_chromosome_data,study_title,tag_index,
+1,37486684,Heron9796917,,CGGAGACA,ATGCGACT,,Sanger_tailed_artic_v1_384,CGGAGACA,ATGCGACT,u1@sanger.ac.uk u2@sanger.ac.uk u3@sanger.ac.uk,u1@sanger.ac.uk u2@sanger.ac.uk,u3@sanger.ac.uk,u3@sanger.ac.uk,nCoV-2019%2FV3%2FB,0,0,37934326,2,37486684,,,S10068,,,standard,,,from:50 to:800,,,,0,,AAF75128319,,5366657,,Heron9796917,,,MILK-111E1DB,888,,1,0,0,TBD,6187,Heron Project,SARS-CoV-2 (MN908947.3),0,Heron Project,1,
+1,37486708,Heron9795328,,CCGTTAGT,ATCACGAT,,Sanger_tailed_artic_v1_384,CCGTTAGT,ATCACGAT,u1@sanger.ac.uk u2@sanger.ac.uk u3@sanger.ac.uk,u1@sanger.ac.uk u2@sanger.ac.uk,u3@sanger.ac.uk,u3@sanger.ac.uk,nCoV-2019%2FV3%2FB,0,0,37934326,2,37486708,,,S10068,,,standard,,,from:50 to:800,,,,0,,AAK03478856,,5365068,,Heron9795328,,,MILK-111807A,888,,1,0,0,TBD,6187,Heron Project,SARS-CoV-2 (MN908947.3),0,Heron Project,2,
+1,37486732,Heron9796887,,GTTAACGT,TCACAAAC,,Sanger_tailed_artic_v1_384,GTTAACGT,TCACAAAC,u1@sanger.ac.uk u2@sanger.ac.uk u3@sanger.ac.uk,u1@sanger.ac.uk u2@sanger.ac.uk,u3@sanger.ac.uk,u3@sanger.ac.uk,nCoV-2019%2FV3%2FB,0,0,37934326,2,37486732,,,S10068,,,standard,,,from:50 to:800,,,,0,,AAD12826362,,5366627,,Heron9796887,,,MILK-111E144,888,,1,0,0,TBD,6187,Heron Project,SARS-CoV-2 (MN908947.3),0,Heron Project,3,
+1,37486756,Heron9795352,,TCGACTCG,TGATCAAA,,Sanger_tailed_artic_v1_384,TCGACTCG,TGATCAAA,u1@sanger.ac.uk u2@sanger.ac.uk u3@sanger.ac.uk,u1@sanger.ac.uk u2@sanger.ac.uk,u3@sanger.ac.uk,u3@sanger.ac.uk,nCoV-2019%2FV3%2FB,0,0,37934326,2,37486756,,,S10068,,,standard,,,from:50 to:800,,,,0,,AAJ36793163,,5365092,,Heron9795352,,,MILK-11180E3,888,,1,0,0,TBD,6187,Heron Project,SARS-CoV-2 (MN908947.3),0,Heron Project,4,
+1,37486780,Heron9796898,,CATTTATT,AGGAGAAA,,Sanger_tailed_artic_v1_384,CATTTATT,AGGAGAAA,u1@sanger.ac.uk u2@sanger.ac.uk u3@sanger.ac.uk,u1@sanger.ac.uk u2@sanger.ac.uk,u3@sanger.ac.uk,u3@sanger.ac.uk,nCoV-2019%2FV3%2FB,0,0,37934326,2,37486780,,,S10068,,,standard,,,from:50 to:800,,,,0,,AAC11290370,,5366638,,Heron9796898,,,MILK-111E180,888,,1,0,0,TBD,6187,Heron Project,SARS-CoV-2 (MN908947.3),0,Heron Project,5,
+1,27409529,phiX_for_spiked_buffers,,TGTGCAGC,ACTGATGT,,,TGTGCAGC,ACTGATGT,,,,,,1,0,37934326,2,27409529,,10847,,,,standard,,,,,,,0,,,,1255141,,phiX_for_spiked_buffers,,PhiX (Sanger-SNPs),,888,,1,0,0,None,198,Illumina Controls, ,0,,888,
+2,37524165,AP-rna-00162731_G02,,CGGAGACA,ATGCGACT,,Sanger_tailed_artic_v1_384,CGGAGACA,ATGCGACT,u1@sanger.ac.uk u2@sanger.ac.uk u3@sanger.ac.uk,u1@sanger.ac.uk u2@sanger.ac.uk,u3@sanger.ac.uk,u3@sanger.ac.uk,nCoV-2019%2FV3%2FB,0,0,37934327,3,37524165,,,S10068,,,standard,,,from:50 to:800,,,,0,,AAC59260816,,5379699,,AP-rna-00162731_G02,,,ALDP-114FE8F,888,,1,0,0,TBD,6187,Heron Project,SARS-CoV-2 (MN908947.3),0,Heron Project,1,
+2,37518016,AP-rna-00162658_C03,,CCGTTAGT,ATCACGAT,,Sanger_tailed_artic_v1_384,CCGTTAGT,ATCACGAT,u1@sanger.ac.uk u2@sanger.ac.uk u3@sanger.ac.uk,u1@sanger.ac.uk u2@sanger.ac.uk,u3@sanger.ac.uk,u3@sanger.ac.uk,nCoV-2019%2FV3%2FB,0,0,37934327,3,37518016,,,S10068,,,standard,,,from:50 to:800,,,,0,,AAJ01850266,,5379219,,AP-rna-00162658_C03,,,ALDP-114E002,888,,1,0,0,TBD,6187,Heron Project,SARS-CoV-2 (MN908947.3),0,Heron Project,2,
+2,37524177,AP-rna-00162731_G06,,GTTAACGT,TCACAAAC,,Sanger_tailed_artic_v1_384,GTTAACGT,TCACAAAC,u1@sanger.ac.uk u2@sanger.ac.uk u3@sanger.ac.uk,u1@sanger.ac.uk u2@sanger.ac.uk,u3@sanger.ac.uk,u3@sanger.ac.uk,nCoV-2019%2FV3%2FB,0,0,37934327,3,37524177,,,S10068,,,standard,,,from:50 to:800,,,,0,,AAD50353028,,5379711,,AP-rna-00162731_G06,,,ALDP-114FE9E,888,,1,0,0,TBD,6187,Heron Project,SARS-CoV-2 (MN908947.3),0,Heron Project,3,
+2,37518028,AP-rna-00162658_B04,,TCGACTCG,TGATCAAA,,Sanger_tailed_artic_v1_384,TCGACTCG,TGATCAAA,u1@sanger.ac.uk u2@sanger.ac.uk u3@sanger.ac.uk,u1@sanger.ac.uk u2@sanger.ac.uk,u3@sanger.ac.uk,u3@sanger.ac.uk,nCoV-2019%2FV3%2FB,0,0,37934327,3,37518028,,,S10068,,,standard,,,from:50 to:800,,,,0,,AAI21091152,,5379231,,AP-rna-00162658_B04,,,ALDP-114E011,888,,1,0,0,TBD,6187,Heron Project,SARS-CoV-2 (MN908947.3),0,Heron Project,4,
+2,37524189,Heron9812248,,CATTTATT,AGGAGAAA,,Sanger_tailed_artic_v1_384,CATTTATT,AGGAGAAA,u1@sanger.ac.uk u2@sanger.ac.uk u3@sanger.ac.uk,u1@sanger.ac.uk u2@sanger.ac.uk,u3@sanger.ac.uk,u3@sanger.ac.uk,nCoV-2019%2FV3%2FB,0,0,37934327,3,37524189,,,S10068,,,standard,,,from:50 to:800,,,,0,positive,,,5379793,1,Heron9812248,,,positive control%3A DN626424D_A01,888,,1,0,0,TBD,6187,Heron Project,SARS-CoV-2 (MN908947.3),0,Heron Project,5,
+2,27409529,phiX_for_spiked_buffers,,TGTGCAGC,ACTGATGT,,,TGTGCAGC,ACTGATGT,,,,,,1,0,37934327,3,27409529,,10847,,,,standard,,,,,,,0,,,,1255141,,phiX_for_spiked_buffers,,PhiX (Sanger-SNPs),,888,,1,0,0,None,198,Illumina Controls, ,0,,888,
